crates/meilisearch/tests/upgrade/v1_12/snapshots/v1_12_0.rs/check_the_index_scheduler/batches_filter_beforeEnqueuedAt_equal_2025-01-16T16_47_41.snap
---
source: crates/meilisearch/tests/upgrade/v1_12/v1_12_0.rs
---
{
  "results": [
    {
      "uid": 1,
      "progress": null,
      "details": {
        "receivedDocuments": 1,
        "indexedDocuments": 1
      },
      "stats": {
        "totalNbTasks": 1,
        "status": {
          "succeeded": 1
        },
        "types": {
          "documentAdditionOrUpdate": 1
        },
        "indexUids": {
          "kefir": 1
        }
      },
      "duration": "[duration]",
      "startedAt": "[date]",
      "finishedAt": "[date]",
      "batchCreationComplete": "unspecified"
    },
    {
      "uid": 0,
      "progress": null,
      "details": {
        "receivedDocuments": 1,
        "indexedDocuments": 1
      },
      "stats": {
        "totalNbTasks": 1,
        "status": {
          "succeeded": 1
        },
        "types": {
          "documentAdditionOrUpdate": 1
        },
        "indexUids": {
          "kefir": 1
        }
      },
      "duration": "PT0.111055654S",
      "startedAt": "2025-01-16T16:45:16.020248085Z",
      "finishedAt": "2025-01-16T16:45:16.131303739Z",
      "batchCreationComplete": "unspecified"
    }
  ],
  "total": 2,
  "limit": 20,
  "from": 1,
  "next": null
}
